--- a/ze/zeinterval_callbacks.cpp.erb
+++ b/ze/zeinterval_callbacks.cpp.erb
@@ -531,7 +531,7 @@ Case B:
                                             device_to_properties, subdevice_parent);
           state->event_to_profiling_result.erase(it);
      }
-     state->command_partial_payload(it_pp);
+     state->command_partial_payload.erase(it_pp);
 
   <% elsif dbt_event.name_unsanitized == "lttng_ust_ze_profiling:event_profiling_results" %>
      zeinterval_callbacks_state* state = (zeinterval_callbacks_state*) zeinterval_iter_g->callbacks_state;
